deployment/staging/www-react.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: www-staging
  name: www-react
spec:
  type: NodePort
  selector:
    app: www-react
  ports:
    - name: node
      port: 80
      targetPort: node
